# ng-gateway

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Cross.toml  LICENSE  README.md  gateway.toml  lefthook.yml
ng-gateway-bin/: Cargo.toml
ng-gateway-bin/src/: main.rs
ng-gateway-common/: Cargo.toml
ng-gateway-common/src/: lib.rs  logger.rs  metrics.rs
ng-gateway-common/src/casbin/: adapter.rs  mod.rs  service.rs
ng-gateway-common/src/event/: builtin.rs  mod.rs
ng-gateway-core/: Cargo.toml
ng-gateway-core/src/: collector.rs  commands.rs  gateway.rs  lib.rs  lifecycle.rs  realtime.rs
ng-gateway-core/src/northward/: actor.rs  extension.rs  manager.rs  mod.rs  router.rs  runtime_api.rs  subscription_sync.rs
ng-gateway-core/src/southward/: index.rs  manager.rs  mod.rs  monitor.rs  publisher.rs
ng-gateway-error/: Cargo.toml
ng-gateway-error/src/: init.rs  lib.rs  rbac.rs  storage.rs  tls.rs  web.rs
ng-gateway-macros/: Cargo.toml
ng-gateway-macros/src/: active_value.rs  auto_uuid.rs  event.rs  lib.rs  seed.rs
ng-gateway-models/: Cargo.toml
ng-gateway-models/src/: casbin.rs  constants.rs  event.rs  initializer.rs  lib.rs  rbac.rs  settings.rs  web.rs
ng-gateway-models/src/cache/: mod.rs  prelude.rs  user.rs
ng-gateway-models/src/core/: metrics.rs
ng-gateway-models/src/domain/: action.rs  app.rs  app_sub.rs  auth.rs  branding.rs  casbin.rs  channel.rs  common.rs  credentials.rs  device.rs  driver.rs  menu.rs  mod.rs  plugin.rs  point.rs  prelude.rs  relation.rs  role.rs  user.rs
ng-gateway-models/src/entities/: action.rs  app.rs  app_ext.rs  app_sub.rs  branding.rs  casbin.rs  channel.rs  credentials.rs  device.rs  driver.rs  menu.rs  mod.rs  plugin.rs  point.rs  prelude.rs  relation.rs  role.rs  user.rs
ng-gateway-models/src/enums/: common.rs  core.rs  credentials.rs  menu.rs  mod.rs  relation.rs  role.rs
ng-gateway-models/src/idens/: action.rs  app.rs  app_ext.rs  app_sub.rs  branding.rs  casbin.rs  channel.rs  credentials.rs  device.rs  driver.rs  menu.rs  mod.rs  plugin.rs  point.rs  relation.rs  role.rs  user.rs
ng-gateway-northward/kafka/: Cargo.toml  README.md
ng-gateway-northward/kafka/src/: config.rs  factory.rs  lib.rs  metadata.rs  plugin.rs  supervisor.rs
ng-gateway-northward/kafka/tests/: basic_config_test.rs
ng-gateway-northward/opcua-server/: Cargo.toml
ng-gateway-northward/opcua-server/src/: codec.rs  config.rs  factory.rs  lib.rs  metadata.rs  node_cache.rs  node_id.rs  plugin.rs  queue.rs  server.rs  write_dispatch.rs
ng-gateway-northward/pulsar/: Cargo.toml  README.md
ng-gateway-northward/pulsar/src/: config.rs  factory.rs  lib.rs  metadata.rs  plugin.rs  supervisor.rs
ng-gateway-northward/pulsar/tests/: common.rs  mapped_json_test.rs
ng-gateway-northward/thingsboard/: Cargo.toml
ng-gateway-northward/thingsboard/src/: config.rs  factory.rs  handlers.rs  lib.rs  metadata.rs  mqtt.rs  plugin.rs  provision.rs  supervisor.rs  topics.rs  types.rs
ng-gateway-repository/: Cargo.toml
ng-gateway-repository/src/: action.rs  app.rs  app_ext.rs  app_sub.rs  branding.rs  channel.rs  credentials.rs  device.rs  driver.rs  lib.rs  menu.rs  plugin.rs  point.rs  relation.rs  role.rs  user.rs
ng-gateway-sdk/: Cargo.toml  build.rs
ng-gateway-sdk/src/: bin_inspect.rs  error.rs  lib.rs  retry.rs  ui_schema.rs  value.rs
ng-gateway-sdk/src/mqtt/: router.rs
ng-gateway-sdk/src/northward/: codec.rs  downlink.rs  extension.rs  loader.rs  mapping.rs  mod.rs  model.rs  payload.rs  runtime_api.rs  template.rs  types.rs
ng-gateway-sdk/src/northward/envelope/: mod.rs  northward.rs  wire.rs
ng-gateway-sdk/src/southward/: codec.rs  loader.rs  mod.rs  model.rs  types.rs  validation.rs  wire.rs
ng-gateway-southward/dnp3/: Cargo.toml
ng-gateway-southward/dnp3/src/: codec.rs  driver.rs  factory.rs  handler.rs  lib.rs  metadata.rs  supervisor.rs  types.rs
ng-gateway-southward/dnp3/tests/: actions.rs  collect.rs  common.rs
ng-gateway-southward/ethernet-ip/: Cargo.toml
ng-gateway-southward/ethernet-ip/src/: codec.rs  driver.rs  factory.rs  lib.rs  metadata.rs  supervisor.rs  types.rs
ng-gateway-southward/ethernet-ip/tests/: common.rs  downlink_write.rs  uplink_collect.rs
ng-gateway-southward/iec104/: Cargo.toml
ng-gateway-southward/iec104/src/: driver.rs  factory.rs  lib.rs  metadata.rs  supervisor.rs  types.rs
ng-gateway-southward/iec104/src/protocol/: client.rs  codec.rs  error.rs  mod.rs
ng-gateway-southward/mc/: Cargo.toml
ng-gateway-southward/mc/src/: codec.rs  driver.rs  factory.rs  lib.rs  metadata.rs  supervisor.rs  typed_api.rs  types.rs
ng-gateway-southward/mc/src/protocol/: codec.rs  error.rs  mod.rs  planner.rs  types.rs
ng-gateway-southward/mc/src/protocol/frame/: mod.rs  (+7 more)
ng-gateway-southward/modbus/: Cargo.toml
ng-gateway-southward/modbus/src/: codec.rs  driver.rs  factory.rs  lib.rs  metadata.rs  planner.rs  supervisor.rs  types.rs
ng-gateway-southward/modbus/tests/: common.rs  tcp_actions.rs  tcp_collect.rs
ng-gateway-southward/opcua/: Cargo.toml
ng-gateway-southward/opcua/src/: codec.rs  driver.rs  factory.rs  lib.rs  metadata.rs  subscribe.rs  supervisor.rs  types.rs
ng-gateway-storage/: Cargo.toml
ng-gateway-storage/src/: lib.rs
ng-gateway-storage/src/cache/: mod.rs  moka.rs
ng-gateway-storage/src/migration/: m20220101_000001_create_table.rs
ng-gateway-storage/src/sql/: sqlite.rs
ng-gateway-utils/: Cargo.toml
ng-gateway-utils/src/: hash.rs  jwt.rs  lib.rs  tls.rs  tree.rs  url_encoder.rs
ng-gateway-web/: Cargo.toml  build.rs
ng-gateway-web/src/: lib.rs  rbac.rs  static_ui.rs
ng-gateway-web/src/api/: mod.rs
ng-gateway-web/src/api/public/: branding.rs  health.rs  mod.rs
ng-gateway-web/src/api/v1/: action.rs  app.rs  app_sub.rs  auth.rs  branding.rs  channel.rs  device.rs  driver.rs  menu.rs  mod.rs  plugin.rs  point.rs  role.rs  user.rs
ng-gateway-web/src/middleware/: auth.rs  casbin.rs  cors.rs  mod.rs
ng-gateway-web/src/validation/: manager.rs  mod.rs  prelude.rs
ng-gateway-web/src/validation/validators/: custom.rs  duplicate.rs  mod.rs
(+151 files in other folders)
