[package]
name = "ng-gateway-core"
edition = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

# Local
[dependencies.ng-gateway-error]
workspace = true
[dependencies.ng-gateway-storage]
workspace = true
[dependencies.ng-gateway-models]
workspace = true
[dependencies.ng-gateway-common]
workspace = true
[dependencies.ng-gateway-utils]
workspace = true
[dependencies.ng-gateway-repository]
workspace = true
[dependencies.ng-gateway-sdk]
workspace = true

# External dependencies
[dependencies.tokio]
workspace = true
[dependencies.tokio-util]
workspace = true
[dependencies.tokio-stream]
workspace = true
[dependencies.futures]
workspace = true
[dependencies.futures-util]
workspace = true
[dependencies.async-trait]
workspace = true
[dependencies.tracing]
workspace = true
[dependencies.uuid]
workspace = true
[dependencies.chrono]
workspace = true
[dependencies.thiserror]
workspace = true
[dependencies.anyhow]
workspace = true
[dependencies.serde]
workspace = true
[dependencies.serde_json]
workspace = true
[dependencies.serde_repr]
workspace = true
[dependencies.bytes]
workspace = true
[dependencies.downcast-rs]
workspace = true
[dependencies.dashmap]
workspace = true
[dependencies.moka]
workspace = true
[dependencies.sea-orm]
workspace = true
[dependencies.libloading]
workspace = true
[dependencies.rand]
workspace = true
[dependencies.base64]
workspace = true
[dependencies.once_cell]
workspace = true
[dependencies.byteorder]
workspace = true
[dependencies.url]
workspace = true
[dependencies.tracing-subscriber]
workspace = true

# Backoff with async/tokio support for unified retry policies
[dependencies.backoff]
workspace = true
# arc-swap for lock-free atomic Arc swapping
[dependencies.arc-swap]
workspace = true
[dependencies.sysinfo]
workspace = true
