[package]
name = "ng-gateway-repository"
edition = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

# Local
[dependencies.ng-gateway-error]
workspace = true
[dependencies.ng-gateway-storage]
workspace = true
[dependencies.ng-gateway-models]
workspace = true
[dependencies.ng-gateway-common]
workspace = true
[dependencies.ng-gateway-utils]
workspace = true
[dependencies.ng-gateway-sdk]
workspace = true

# ORM
[dependencies.sea-orm]
workspace = true

# Date And Time
[dependencies.chrono]
workspace = true

# UUID
[dependencies.uuid]
workspace = true

# JSON
[dependencies.serde_json]
workspace = true
