[package]
name = "ng-gateway-sdk"
edition = { workspace = true }
publish = true
version = "0.1.0"
build = "build.rs"


[dependencies]
# Serialization
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }

# Downcast
downcast-rs = { version = "2.0" }

# Error Handling
thiserror = { version = "2.0" }

# Async Trait
async-trait = { version = "0.1" }

# Date and Time
chrono = { version = "0.4", features = ["serde"] }

# Tokio
tokio = { version = "1.47", features = ["full"] }

# Bytes
bytes = { version = "1.9" }
base64 = { version = "0.22" }

# UUID
uuid = { version = "1.13", features = ["v4", "serde"] }

# Backoff
backoff = { version = "0.4" }
once_cell = { version = "1.20" }

# Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "std",
] }

# Dashmap
dashmap = { version = "6.1" }

# Libloading
libloading = { version = "0.9" }

# Binary parsing
goblin = { version = "0.10" }
sha2 = { version = "0.10" }
hex = { version = "0.4" }

# Excel read/write
rust_xlsxwriter = { version = "0.92" }
calamine = { version = "0.32" }
regex = { version = "1.11" }

# Mqtt Client
rumqttc = { version = "0.25", features = ["use-rustls"] }

sea-orm = { version = "1.1", features = [
  "with-json",
  "serde_json",
  "sea-orm-internal",
] }

# Mapping engine (JMESPath) for declarative JSON transformations.
# NOTE: Enable `sync` so compiled expressions are Send+Sync in async runtimes.
jmespath = { version = "0.4.0", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
handlebars = { version = "6.3" }
