[package]
name = "ng-plugin-pulsar"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ng-gateway-sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt", "io"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
backoff = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
handlebars = "6.3.2"

# Pulsar client
pulsar = { version = "6.6.0", default-features = false, features = [
  "tokio-runtime",
  "compression",
] }
