[package]
name = "ng-plugin-thingsboard"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ng-gateway-sdk = { workspace = true }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_json = { version = "1.0" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio-util = { version = "0.7", features = ["rt", "io", "codec"] }
tracing = { version = "0.1" }
bytes = { version = "1.7" }
thiserror = { version = "2.0" }
futures-util = { version = "0.3" }
tracing-subscriber = { version = "0.3" }
downcast-rs = { version = "2.0" }
uuid = { version = "1.11", features = ["v4", "serde"] }
rumqttc = { version = "0.25", default-features = false, features = [
  "use-rustls",
] }
backoff = { version = "0.4" }
chrono = { version = "0.4" }
arc-swap = "1.6"
