[package]
name = "ng-driver-modbus"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ng-gateway-sdk = { workspace = true }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_json = { version = "1.0" }
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
tokio-modbus = { version = "0.17", features = ["tcp", "rtu"] }
tokio-serial = { version = "5.4" }
backoff = { version = "0.4" }
futures = { version = "0.3" }
tokio-util = { version = "0.7", features = ["rt", "io"] }
tracing = { version = "0.1" }
base64 = { version = "0.22" }
bytes = { version = "1.7" }
thiserror = { version = "2.0" }
futures-util = { version = "0.3" }
tracing-subscriber = { version = "0.3" }
arc-swap = { version = "1.7" }
